--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,10 @@
         {{!-- <h1>{{title}}</h1> --}}
          {{>header}}
     <!-- <img src="/img/me.png"> -->
+    <p>
+        This site was created by Pradeep. 
+        It uses the data from operWeatherMap.org 
+    </p>
          <img class="potrait" src="pic/me.jpg">
     {{!-- <p>Created by {{name}}</p> --}}
     </div>
